# homework

./: .travis.yml  jsonData.txt  mdialog.py  pythonShark.py  test.py  testP.py  testP2.py  testP3.py  新建文本文档.txt
33/: defectSplitDetection.py  fcm.py  test.py  testLC.py  testWater.py
FormOCR/: pom.xml
MyList/: MyList.py  readme.md
dart/: .packages  mysql_test.dart  pubspec.yaml  random_p.dart  sqlite_test.dart
demo/: pubspec.yaml
dict/: 28.py  28：讲讲新华字典，牛津英汉互译字典的那个“字典”.md  29.py  29_extension.py  29：字典的增删改查——查.md  30.py  30：字典的增删改查——删.md  31.py  31：字典的增删改查——其他有用但是不常用的方法.md  32.py  32_2.py  32：字典（dict）跟Json不得不说的二三事（1）.md  33.py  33：字典（dict）跟Json不得不说的二三事（2）.md
dj/: requirements.txt  tip.txt  trigger.txt
flutter/: .packages  userInfo.dart  userInfo_helper.dart  viewlist.dart
func/: 34.py  34_1.py  34_2.py  34_3.py  34：function，不是f^^ktion是function.md  35.py  35_1.py  35：函数参数。知道什么叫参数吗，就是——.md
funnyJs/: test.html
hideFunction/: generate.py  map.txt  params.pickle  read.py  readSecuratyFix.py  readme.md
homework1/: README.md  新建 DOC 文档.doc
homework2/: 新建 DOCX 文档.docx
house/: fuDe.py  hu.py  inp.py  mid.py  requirements.txt  test.py  test211.py  test212.py  test214.py  test521.py  testHu.py
house/227/: fastDtw.py  pyproject.toml  removeHighlight.py  requirements.txt  result.txt  test.html  test.py  test227.py  test228.py  testLC.py  testPipe.py  testPyDCM.py  testTuoyuan.py  threshold.py  utils.py  utils2.py  假片识别测试.py
house/227/ImageSeg-KMeans-master/: imageSegmentation.py
imgInpaint/: make.py  readme.md  test.py
lru&lfu/: pLFU.py  pLRU.py  (+1 more)
(+213 files in other folders)
