[tool.poetry]
name = "test"
version = "0.1.0"
description = "test package"
authors = ["guchengxi1994 <528490652@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit_image="^0.15.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.poetry.dev-dependencies]



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
